[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vrpbtw-rl"
version = "0.1.0"
description = "Deep RL for Vehicle Routing Problem with Time Windows and Backhauls"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "gymnasium>=0.29",
    "pandas>=2.2",
    "pydantic>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard>=2.16",
    "wandb>=0.16",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "rich>=13.7",
    "optuna>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "ipykernel>=6.29",
]

[project.scripts]
vrpbtw-train   = "scripts.train:main"
vrpbtw-eval    = "scripts.evaluate:main"
vrpbtw-infer   = "scripts.infer:main"
vrpbtw-tune    = "scripts.tune:main"
vrpbtw-data    = "scripts.generate_data:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
